--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 backend/** @TekMath @flavien-chenu
-web/** @sdragos1
-mobile/** @thomaltarix
+web/** @sdragos1 @Yann-Masson
+mobile/** @thomaltarix @Yann-Masson
