--- a/backend/.editorconfig
+++ b/backend/.editorconfig
@@ -3,6 +3,7 @@ root = true
 # All files
 [*]
 indent_style = space
+end_of_line = lf
 
 # Xml files
 [*.xml]
@@ -18,7 +19,7 @@ indent_size = 4
 tab_width = 4
 
 # New line preferences
-insert_final_newline = false
+insert_final_newline = true
 
 #### .NET Coding Conventions ####
 [*.{cs,vb}]
