feat(backend): add api solution layers with dependency injection files

--- a/backend/Zeus.Api.Web/Zeus.Api.Web.csproj
+++ b/backend/Zeus.Api.Web/Zeus.Api.Web.csproj
@@ -17,4 +17,13 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Contracts\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Zeus.Api.Application\Zeus.Api.Application.csproj" />
+      <ProjectReference Include="..\Zeus.Api.Infrastructure\Zeus.Api.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
