feat(backend): add daemon program

--- a/backend/Zeus.Daemon.Runner/Zeus.Daemon.Runner.csproj
+++ b/backend/Zeus.Daemon.Runner/Zeus.Daemon.Runner.csproj
@@ -13,5 +13,8 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
- 
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+    </ItemGroup>
 </Project>
