refactor: rename pages folder to features
I also added some packages even it's not this issue meaning

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  bloc: ^8.1.0
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.8
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
