--- a/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
+++ b/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
@@ -13,6 +13,11 @@
     <ItemGroup>
       <PackageReference Include="ErrorOr" Version="2.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
+      <PackageReference Include="Mediator.Abstractions" Version="2.1.7" />
+      <PackageReference Include="Mediator.SourceGenerator" Version="2.1.7">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0" />
     </ItemGroup>
