--- a/backend/Zeus.Api.Domain/Zeus.Api.Domain.csproj
+++ b/backend/Zeus.Api.Domain/Zeus.Api.Domain.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="ErrorOr" Version="2.0.1" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+      <PackageReference Include="Mediator.Abstractions" Version="2.1.7" />
     </ItemGroup>
 
 </Project>
