--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-
   flutter_bloc: ^8.1.1
 
 dev_dependencies:
+  mockito: 5.4.4
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
 
