--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -24,3 +24,19 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  fonts:
+    - family: Mada
+      fonts:
+        - asset: fonts/Mada/Mada-Bold.ttf
+          weight: 700
+        - asset: fonts/Mada/Mada-ExtraBold.ttf
+          weight: 800
+
+    - family: Onest
+      fonts:
+        - asset: fonts/Onest/Onest-Regular.ttf
+        - asset: fonts/Onest/Onest-Medium.ttf
+          weight: 500
+        - asset: fonts/Onest/Onest-SemiBold.ttf
+          weight: 600
