refactor(backend): add custom time for tokens

--- a/backend/Zeus.Api.Web/appsettings.json
+++ b/backend/Zeus.Api.Web/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "JwtSettings": {
     "Secret": "",
-    "ExpiryMinutes": 60,
+    "AccessTokenExpiryMinutes": 60,
+    "RefreshTokenExpiryMinutes": 43200,
     "Issuer": "Triggo Api",
     "Audience": "Triggo Client"
   }
