feat(backend): add dockerfile with layers

--- a/backend/Zeus.Api.Web/Dockerfile
+++ b/backend/Zeus.Api.Web/Dockerfile
@@ -7,17 +7,21 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Web/Web.csproj", "Web/"]
-RUN dotnet restore "Web/Web.csproj"
+COPY ["Zeus.sln", "Zeus.sln.DotSettings.user", "./"]
+COPY ["Zeus.Api.Application/Zeus.Api.Application.csproj", "Zeus.Api.Application/"]
+COPY ["Zeus.Api.Domain/Zeus.Api.Domain.csproj", "Zeus.Api.Domain/"]
+COPY ["Zeus.Api.Infrastructure/Zeus.Api.Infrastructure.csproj", "Zeus.Api.Infrastructure/"]
+COPY ["Zeus.Api.Web/Zeus.Api.Web.csproj", "Zeus.Api.Web/"]
+RUN dotnet restore "Zeus.Api.Web/Zeus.Api.Web.csproj"
 COPY . .
-WORKDIR "/src/Web"
-RUN dotnet build "Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Zeus.Api.Web"
+RUN dotnet build "Zeus.Api.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Zeus.Api.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Web.dll"]
+ENTRYPOINT ["dotnet", "Zeus.Api.Web.dll"]
