--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -11,13 +11,15 @@ dependencies:
   bloc: ^8.1.0
   http: ^1.2.2
   cupertino_icons: ^1.0.8
+  json_annotation: ^4.9.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
 
 dev_dependencies:
   mockito: 5.4.4
-  build_runner: ^2.3.3
+  build_runner: ^2.4.13
+  json_serializable: ^6.9.0
   flutter_test:
     sdk: flutter
 
