--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   mockito: 5.4.4
