--- a/backend/Zeus.Api.Web/Zeus.Api.Web.csproj
+++ b/backend/Zeus.Api.Web/Zeus.Api.Web.csproj
@@ -9,17 +9,16 @@
   </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Mapster" Version="7.4.0" />
+        <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+        <PackageReference Include="Scalar.AspNetCore" Version="1.2.45" />
     </ItemGroup>
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Contracts\" />
     </ItemGroup>
 
     <ItemGroup>
