--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,5 +5,7 @@ services:
     build:
         context: backend/
         dockerfile: Zeus.Api.Web/Dockerfile
+    env_file:
+      - .env
     ports:
-      - "5000:8080"
+      - "5090:8080"
