--- a/backend/Zeus.Api.Domain/Zeus.Api.Domain.csproj
+++ b/backend/Zeus.Api.Domain/Zeus.Api.Domain.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Common\Services\" />
+      <Folder Include="Common\Integrations\" />
     </ItemGroup>
 
 </Project>
