--- a/backend/Zeus.Api.Infrastructure/Zeus.Api.Infrastructure.csproj
+++ b/backend/Zeus.Api.Infrastructure/Zeus.Api.Infrastructure.csproj
@@ -11,6 +11,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Mapster" Version="7.4.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.1" />
