--- a/backend/Zeus.Api.Web/appsettings.Development.json
+++ b/backend/Zeus.Api.Web/appsettings.Development.json
@@ -11,5 +11,8 @@
     "RefreshTokenExpiryMinutes": 43200,
     "Issuer": "Triggo Development Api",
     "Audience": "Triggo Developer"
+  },
+  "UserSettings": {
+    "DefaultPicture": "https://play.nintendo.com/images/profile-mk-kamek.7bf2a8f2.aead314d58b63e27.png"
   }
 }
