--- a/backend/Zeus.Api.Web/appsettings.json
+++ b/backend/Zeus.Api.Web/appsettings.json
@@ -12,5 +12,8 @@
     "RefreshTokenExpiryMinutes": 43200,
     "Issuer": "Triggo Api",
     "Audience": "Triggo Client"
+  },
+  "UserSettings": {
+    "DefaultPicture": "https://play.nintendo.com/images/profile-mk-kamek.7bf2a8f2.aead314d58b63e27.png"
   }
 }
