feat(backend): add pagination and advanced queries on integrations repositories

--- a/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
+++ b/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Zeus.Api.Domain\Zeus.Api.Domain.csproj" />
       <ProjectReference Include="..\Zeus.Common.Application\Zeus.Common.Application.csproj" />
+      <ProjectReference Include="..\Zeus.Common.Extensions\Zeus.Common.Extensions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
