feat(web): add label and input in triggo ui lib
Signed-off-by: Yann <yannmasson17@gmail.com>

--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,9 @@
     "@ngrx/operators": "^18.1.1",
     "@ngrx/signals": "^18.1.1",
     "@spartan-ng/ui-core": "0.0.1-alpha.356",
+    "@spartan-ng/ui-formfield-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-forms-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-label-brain": "0.0.1-alpha.356",
     "class-variance-authority": "^0.6.0",
     "clsx": "^2.1.1",
     "rxjs": "~7.8.0",
