--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_svg: ^1.0.3
   flutter_launcher_icons: ^0.13.1
+  equatable: ^2.0.7
 
 flutter_icons:
   android: true
