--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_launcher_icons: ^0.13.1
   json_serializable: ^6.9.0
+  provider: ^6.1.2
 
 dev_dependencies:
   mockito: 5.4.4
