--- a/backend/Zeus.Api.Web/appsettings.Development.json
+++ b/backend/Zeus.Api.Web/appsettings.Development.json
@@ -14,5 +14,16 @@
   },
   "UserSettings": {
     "DefaultPicture": "https://play.nintendo.com/images/profile-mk-kamek.7bf2a8f2.aead314d58b63e27.png"
+  },
+  "IntegrationsSettings": {
+    "Discord": {
+      "ClientId": "clientId",
+      "RedirectUrl": "redirectUrl",
+      "Scope": [
+        "identify",
+        "dm_channels.messages.write",
+        "dm_channels.messages.read"
+      ]
+    }
   }
 }
