--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ng-icons/core": "^29.10.0",
+    "@ng-icons/heroicons": "^29.10.0",
     "@ngrx/operators": "^18.1.1",
     "@ngrx/signals": "^18.1.1",
     "@spartan-ng/ui-core": "0.0.1-alpha.356",
