feat(backend): add discord service

--- a/backend/Zeus.Api.Web/appsettings.Development.json
+++ b/backend/Zeus.Api.Web/appsettings.Development.json
@@ -17,7 +17,9 @@
   },
   "IntegrationsSettings": {
     "Discord": {
+      "ApiEndpoint": "https://discord.com/api/v10",
       "ClientId": "clientId",
+      "ClientSecret": "clientSecret",
       "RedirectUrl": "redirectUrl",
       "Scope": [
         "identify",
