--- a/backend/Zeus.Api.Web/appsettings.json
+++ b/backend/Zeus.Api.Web/appsettings.json
@@ -18,7 +18,9 @@
   },
   "IntegrationsSettings": {
     "Discord": {
+        "ApiEndpoint": "https://discord.com/api/v10",
         "ClientId": "clientId",
+        "ClientSecret": "clientSecret",
         "RedirectUrl": "redirectUrl",
         "Scope": [
           "identify",
