feat(backend): add discord link generator and endpoint

--- a/backend/Zeus.Api.Web/appsettings.json
+++ b/backend/Zeus.Api.Web/appsettings.json
@@ -19,13 +19,17 @@
   "IntegrationsSettings": {
     "Discord": {
         "ApiEndpoint": "https://discord.com/api/v10",
+        "OAuth2Endpoint": "https://discord.com/oauth2/authorize",
         "ClientId": "clientId",
         "ClientSecret": "clientSecret",
         "RedirectUrl": "redirectUrl",
         "Scope": [
           "identify",
-          "dm_channels.messages.write",
-          "dm_channels.messages.read"
+          "email",
+          "gdm.join",
+          "guilds",
+          "guilds.join",
+          "role_connections.write"
         ]
     }
   }
