--- a/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
+++ b/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="ErrorOr" Version="2.0.1" />
       <PackageReference Include="FluentValidation" Version="11.11.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
+      <PackageReference Include="Mapster" Version="7.4.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
