--- a/backend/Zeus.Api.Web/appsettings.Development.json
+++ b/backend/Zeus.Api.Web/appsettings.Development.json
@@ -2,8 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
+}
   },
   "JwtSettings": {
     "Secret": "",
@@ -14,6 +15,9 @@
   },
   "UserSettings": {
     "DefaultPicture": "https://play.nintendo.com/images/profile-mk-kamek.7bf2a8f2.aead314d58b63e27.png"
+  },
+  "ConnectionStrings": {
+    "DefaultDatabase": "Host=localhost;Username=zeus;Password=zeus;Port=35432;Database=triggo;Pooling=true;"
   },
   "IntegrationsSettings": {
     "Discord": {
