--- a/backend/Zeus.Api.Web/appsettings.json
+++ b/backend/Zeus.Api.Web/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*",
@@ -15,6 +16,9 @@
   },
   "UserSettings": {
     "DefaultPicture": "https://play.nintendo.com/images/profile-mk-kamek.7bf2a8f2.aead314d58b63e27.png"
+  },
+  "ConnectionStrings": {
+    "DefaultDatabase": "Host=myserver;Username=mylogin;Password=mypass;Port=5432;Database=mydatabase"
   },
   "IntegrationsSettings": {
     "Discord": {
