--- a/backend/Zeus.Api.Domain/Zeus.Api.Domain.csproj
+++ b/backend/Zeus.Api.Domain/Zeus.Api.Domain.csproj
@@ -15,4 +15,8 @@
       <ProjectReference Include="..\Zeus.Common.Domain\Zeus.Common.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Integrations\Common\" />
+    </ItemGroup>
+
 </Project>
