--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "@spartan-ng/ui-label-brain": "0.0.1-alpha.356",
     "class-variance-authority": "^0.6.0",
     "clsx": "^2.1.1",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
