--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -17,33 +17,14 @@
     "module": "ES2022",
     "baseUrl": "./",
     "paths": {
-      "@repositories/*": [
-        "src/repositories/*"
-      ],
-      "@models/*": [
-        "src/models/*"
-      ],
-      "@mediators/*": [
-        "src/mediators/*"
-      ],
-      "@utils/*": [
-        "src/utils/*"
-      ],
-      "@components/*": [
-        "src/app/components/*"
-      ],
-      "@features/*": [
-        "src/app/features/*"
-      ],
-      "@app/*": [
-        "src/app/*"
-      ],
-      "@triggo-ui/*": [
-        "./libs/triggo-ui/*"
-      ],
-      "@spartan-ng/ui-spinner-helm": [
-        ".\\libs/triggo-ui/ui-spinner-helm/src/index.ts"
-      ]
+      "@repositories/*": ["src/repositories/*"],
+      "@models/*": ["src/models/*"],
+      "@mediators/*": ["src/mediators/*"],
+      "@utils/*": ["src/utils/*"],
+      "@components/*": ["src/app/components/*"],
+      "@features/*": ["src/app/features/*"],
+      "@app/*": ["src/app/*"],
+      "@triggo-ui/*": ["./libs/triggo-ui/*"]
     }
   },
   "angularCompilerOptions": {
