--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ JwtSettings__Secret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Discord__ClientId=123456789
 IntegrationsSettings__Discord__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Discord__RedirectUrl=http://localhost:4200/oauth2/discord/
+
+ASPNETCORE_ENVIRONMENT=Production
