feat(mobile): add right assets for navigation bar

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,6 +39,9 @@ flutter:
   assets:
     - assets/icons/logo.svg
     - assets/icons/bubbles.svg
+    - assets/icons/home.svg
+    - assets/icons/link.svg
+    - assets/icons/bolt.svg
 
   uses-material-design: true
 
