--- a/web/package.json
+++ b/web/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "^19.0.0",
     "@ng-icons/core": "^29.10.0",
     "@ng-icons/heroicons": "^29.10.0",
+    "@ng-icons/lucide": "^26.3.0",
     "@ngrx/operators": "^18.1.1",
     "@ngrx/signals": "^18.1.1",
     "@spartan-ng/ui-core": "0.0.1-alpha.356",
+    "@spartan-ng/ui-dialog-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-formfield-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-forms-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-label-brain": "0.0.1-alpha.356",
