refactor(backend): change Event to Trigger in automations

--- a/backend/Zeus.Api.Web/services-settings.json
+++ b/backend/Zeus.Api.Web/services-settings.json
@@ -4,7 +4,7 @@
       "Name": "Discord",
       "IconUri": "https://cdn.prod.website-files.com/6257adef93867e50d84d30e2/653714c1f22aef3b6921d63d_636e0a6ca814282eca7172c6_icon_clyde_white_RGB.svg",
       "Color": "#5865F2",
-      "Events": {
+      "Triggers": {
         "MessageReceivedInChannel": {
           "Name": "Message received in channel",
           "Description": "Triggers when a message is received in a specific guild channel.",
