--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   json_serializable: ^6.9.0
   provider: ^6.1.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   mockito: 5.4.4
