--- a/backend/Zeus.Daemon.Domain/Zeus.Daemon.Domain.csproj
+++ b/backend/Zeus.Daemon.Domain/Zeus.Daemon.Domain.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\Zeus.Common.Domain\Zeus.Common.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Automation\ValueObjects\" />
+    </ItemGroup>
+
 </Project>
