--- a/backend/Zeus.Daemon.Application/Zeus.Daemon.Application.csproj
+++ b/backend/Zeus.Daemon.Application/Zeus.Daemon.Application.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0" />
+      <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
     </ItemGroup>
 
     <ItemGroup>
