--- a/backend/Zeus.Daemon.Runner/appsettings.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.json
@@ -4,7 +4,7 @@
       "ApiEndpoint": "https://discord.com/api/v10",
       "WebsocketEndpoint": "wss://gateway.discord.gg/",
       "ClientId": "clientId",
-      "ClientSecret": "clientSecret"
+      "BotToken": ""
     }
   }
 }
