--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ JwtSettings__Secret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Discord__ClientId=123456789
 IntegrationsSettings__Discord__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Discord__RedirectUrl=http://localhost:4200/oauth2/discord/
+IntegrationsSettings__Discord__BotToken=ABCdefGHI123456789,OoO-09876azerty
 ConnectionStrings__DefaultDatabase=Host=zeus-db;Port=5432;Database=zeus;Username=zeus;Password=zeus
 POSTGRES_DB=triggo
 POSTGRES_USER=zeus
