feat(backend): add gRPC api with polling

--- a/backend/Zeus.Daemon.Infrastructure/Zeus.Daemon.Infrastructure.csproj
+++ b/backend/Zeus.Daemon.Infrastructure/Zeus.Daemon.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Zeus.Api.gRPC.SDK\Zeus.Api.gRPC.SDK.csproj" />
       <ProjectReference Include="..\Zeus.Daemon.Application\Zeus.Daemon.Application.csproj" />
     </ItemGroup>
 
