--- a/backend/Zeus.Api.Infrastructure/Zeus.Api.Infrastructure.csproj
+++ b/backend/Zeus.Api.Infrastructure/Zeus.Api.Infrastructure.csproj
@@ -20,4 +20,8 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
 </Project>
