--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,11 +9,11 @@ services:
       - "35432:5432"
     volumes:
       - zeus-db-data:/var/lib/postgresql/data
-       - ./database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+        - ./database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
     networks:
       - zeus-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
+      test: [ "CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -22,8 +22,8 @@ services:
     container_name: zeus-api-migrations
     restart: "no"
     build:
-        context: backend/
-        dockerfile: Zeus.Api.Migrations/Dockerfile
+      context: backend/
+      dockerfile: Zeus.Api.Migrations/Dockerfile
     env_file:
       - .env
     networks:
@@ -36,8 +36,8 @@ services:
     container_name: zeus-api-web
     restart: always
     build:
-        context: backend/
-        dockerfile: Zeus.Api.Web/Dockerfile
+      context: backend/
+      dockerfile: Zeus.Api.Web/Dockerfile
     env_file:
       - .env
     ports:
@@ -46,7 +46,33 @@ services:
       - zeus-network
     depends_on:
       zeus-api-migrations:
-          condition: service_completed_successfully
+        condition: service_completed_successfully
+  
+  zeus-api-grpc:
+    container_name: zeus-api-grpc
+    restart: always
+    build:
+      context: backend/
+      dockerfile: Zeus.Api.gRPC/Dockerfile
+    env_file:
+      - .env
+    networks:
+      - zeus-network
+    depends_on:
+      - zeus-api-web
+
+  zeus-daemon-runner:
+    container_name: zeus-daemon-runner
+    restart: always
+    build:
+      context: backend/
+      dockerfile: Zeus.Daemon.Runner/Dockerfile
+    env_file:
+      - .env
+    networks:
+      - zeus-network
+    depends_on:
+      - zeus-api-grpc
 
 volumes:
   zeus-db-data:
