--- a/mobile/Dockerfile.test
+++ b/mobile/Dockerfile.test
@@ -1,12 +1,23 @@
-FROM ubuntu:20.04
+FROM debian:bullseye-slim
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
-    unzip \
     git \
+    unzip \
+    ca-certificates \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-RUN git clone https://github.com/flutter/flutter.git -b stable --depth 1 /usr/local/flutter
-ENV PATH="/usr/local/flutter/bin:/usr/local/flutter/bin/cache/dart-sdk/bin:${PATH}"
+WORKDIR /usr/local
+
+RUN git clone https://github.com/flutter/flutter.git
 
 WORKDIR /app
+
+ENV PATH="/usr/local/flutter/bin:/usr/local/flutter/bin/cache/dart-sdk/bin:${PATH}"
+
+COPY . .
+
+RUN flutter pub get
+
+CMD ["flutter", "test"]
