refactor(back): change Common sln dir to BuildingBlocks

--- a/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
+++ b/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
@@ -8,8 +8,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Zeus.Api.Domain\Zeus.Api.Domain.csproj" />
-      <ProjectReference Include="..\Zeus.Common.Application\Zeus.Common.Application.csproj" />
-      <ProjectReference Include="..\Zeus.Common.Extensions\Zeus.Common.Extensions.csproj" />
+      <ProjectReference Include="..\Zeus.BuildingBlocks.Application\Zeus.BuildingBlocks.Application.csproj" />
+      <ProjectReference Include="..\Zeus.BuildingBlocks.Extensions\Zeus.BuildingBlocks.Extensions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
