--- a/backend/Zeus.Api.Domain/Zeus.Api.Domain.csproj
+++ b/backend/Zeus.Api.Domain/Zeus.Api.Domain.csproj
@@ -12,6 +12,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Zeus.Common.Domain\Zeus.Common.Domain.csproj" />
+      <ProjectReference Include="..\Zeus.BuildingBlocks.Domain\Zeus.BuildingBlocks.Domain.csproj" />
     </ItemGroup>
 </Project>
