--- a/backend/Zeus.Daemon.Application/Zeus.Daemon.Application.csproj
+++ b/backend/Zeus.Daemon.Application/Zeus.Daemon.Application.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Zeus.Common.Application\Zeus.Common.Application.csproj" />
+      <ProjectReference Include="..\Zeus.BuildingBlocks.Application\Zeus.BuildingBlocks.Application.csproj" />
       <ProjectReference Include="..\Zeus.Daemon.Domain\Zeus.Daemon.Domain.csproj" />
     </ItemGroup>
 
