--- a/backend/Zeus.Daemon.Domain/Zeus.Daemon.Domain.csproj
+++ b/backend/Zeus.Daemon.Domain/Zeus.Daemon.Domain.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Zeus.Common.Domain\Zeus.Common.Domain.csproj" />
+      <ProjectReference Include="..\Zeus.BuildingBlocks.Domain\Zeus.BuildingBlocks.Domain.csproj" />
     </ItemGroup>
 
 </Project>
