--- a/backend/Zeus.Daemon.Runner/appsettings.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.json
@@ -6,5 +6,10 @@
       "ClientId": "clientId",
       "BotToken": ""
     }
+  },
+  "GRpcApiSettings": {
+    "method": "http",
+    "Host": "localhost",
+    "Port": 5069
   }
 }
