refactor(daemon): add triggers registry

--- a/backend/Zeus.Daemon.Application/Zeus.Daemon.Application.csproj
+++ b/backend/Zeus.Daemon.Application/Zeus.Daemon.Application.csproj
@@ -20,4 +20,8 @@
       <ProjectReference Include="..\Zeus.Daemon.Domain\Zeus.Daemon.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Interfaces\ITriggerHandlerZ.cs" />
+    </ItemGroup>
+
 </Project>
