--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
     - assets/icons/bolt.svg
     - assets/icons/people.svg
     - assets/icons/chat.svg
+    - assets/icons/cog-6-tooth.svg
 
   uses-material-design: true
 
