feat(api): add bot token to web api settings

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -16,6 +16,7 @@
       "ClientId": "clientId",
       "ClientSecret": "clientSecret",
       "RedirectUrl": "redirectUrl",
+      "BotToken": "",
       "Scope": [
         "identify",
         "email",
