--- a/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
+++ b/backend/Zeus.Api.Application/Zeus.Api.Application.csproj
@@ -23,4 +23,9 @@
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Integrations\Query\Discord\GetDiscordGuildChannels\" />
+      <Folder Include="Integrations\Query\Integrations\" />
+    </ItemGroup>
+
 </Project>
