refactor(daemon): changing execution way

--- a/backend/Zeus.Daemon.Application/Zeus.Daemon.Application.csproj
+++ b/backend/Zeus.Daemon.Application/Zeus.Daemon.Application.csproj
@@ -8,15 +8,15 @@
 
     <ItemGroup>
       <PackageReference Include="ErrorOr" Version="2.0.1" />
-      <PackageReference Include="FluentValidation" Version="11.11.0" />
-      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.AutoActivation" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Zeus.BuildingBlocks.Application\Zeus.BuildingBlocks.Application.csproj" />
+      <ProjectReference Include="..\Zeus.BuildingBlocks.Extensions\Zeus.BuildingBlocks.Extensions.csproj" />
       <ProjectReference Include="..\Zeus.Daemon.Domain\Zeus.Daemon.Domain.csproj" />
     </ItemGroup>
 
