feat(api): add oauth2 configuration

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -26,5 +26,12 @@
         "role_connections.write"
       ]
     }
+  },
+  "OAuth2Settings": {
+    "Google": {
+      "ClientId": "clientId",
+      "ClientSecret": "",
+      "RedirectUrl": ""
+    }
   }
 }
