--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
@@ -1,6 +1,6 @@
 ﻿{
   "JwtSettings": {
-    "Secret": "secret",
+    "Secret": "",
     "AccessTokenExpiryMinutes": 60,
     "RefreshTokenExpiryMinutes": 43200,
     "Issuer": "Triggo Api",
@@ -14,7 +14,7 @@
       "ApiEndpoint": "https://discord.com/api/v10",
       "OAuth2Endpoint": "https://discord.com/oauth2/authorize",
       "ClientId": "clientId",
-      "ClientSecret": "clientSecret",
+      "ClientSecret": "",
       "RedirectUrl": "redirectUrl",
       "BotToken": "",
       "Scope": [
@@ -25,6 +25,13 @@
         "guilds.join",
         "role_connections.write"
       ]
+    }
+  },
+  "OAuth2Settings": {
+    "Google": {
+      "ClientId": "clientId",
+      "ClientSecret": "",
+      "RedirectUrl": ""
     }
   }
 }
