--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   json_serializable: ^6.9.0
   provider: ^6.1.2
   url_launcher: ^6.3.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   mockito: 5.4.4
