--- a/backend/Zeus.Daemon.Runner/appsettings.Development.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.Development.json
@@ -4,8 +4,8 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
-      "Grpc": "Information",
-      "System": "Information"
+      "Grpc": "Warning",
+      "System": "Warning"
     }
   },
   "IntegrationsSettings": {
