--- a/backend/Zeus.Common.Domain/Zeus.Common.Domain.csproj
+++ b/backend/Zeus.Common.Domain/Zeus.Common.Domain.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="JsonSchema.Net" Version="7.3.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
     </ItemGroup>
