refactor(api): add some endpoints to google config

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -29,6 +29,8 @@
   },
   "OAuth2Settings": {
     "Google": {
+      "TokenEndpoint": "https://oauth2.googleapis.com/token",
+      "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/auth",
       "ClientId": "clientId",
       "ClientSecret": "",
       "RedirectUrl": ""
