feat(api): add oauth2 google configuration endpoint

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ POSTGRES_PASSWORD=zeus
 POSTGRES_HOST=zeus-db
 POSTGRES_PORT=5432
 ASPNETCORE_ENVIRONMENT=Production
+Oauth2Settings__Google__ClientId=123456789
+Oauth2Settings__Google__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
+Oauth2Settings__Google__RedirectUrl=http://localhost:4200/oauth2/google/
