--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -17,7 +17,7 @@
       "ClientSecret": "clientSecret",
       "RedirectUrl": "redirectUrl",
       "BotToken": "",
-      "Scope": [
+      "Scopes": [
         "identify",
         "email",
         "gdm.join",
@@ -33,7 +33,12 @@
       "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/auth",
       "ClientId": "clientId",
       "ClientSecret": "",
-      "RedirectUrl": ""
+      "RedirectUrl": "",
+      "Scopes": [
+        "openid",
+        "profile",
+        "email"
+      ]
     }
   }
 }
