feat(api): add google authentication endpoint and commands

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
@@ -31,13 +31,14 @@
     "Google": {
       "TokenEndpoint": "https://oauth2.googleapis.com/token",
       "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/auth",
+      "ApiEndpoint": "https://www.googleapis.com",
       "ClientId": "clientId",
       "ClientSecret": "",
       "RedirectUrl": "",
       "Scopes": [
-        "openid",
-        "profile",
-        "email"
+        "https://www.googleapis.com/auth/userinfo.email",
+        "https://www.googleapis.com/auth/userinfo.profile",
+        "openid"
       ]
     }
   }
