--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -35,9 +35,9 @@
       "ClientSecret": "",
       "RedirectUrl": "",
       "Scopes": [
-        "openid",
-        "profile",
-        "email"
+        "https://www.googleapis.com/auth/userinfo.email",
+        "https://www.googleapis.com/auth/userinfo.profile",
+        "openid"
       ]
     }
   }
