feat(backend): add notion integration configuration

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -25,6 +25,13 @@
         "guilds.join",
         "role_connections.write"
       ]
+    },
+    "Notion": {
+      "ApiEndpoint": "https://api.notion.com/v1",
+      "OAuth2Endpoint": "https://api.notion.com/v1/oauth/authorize",
+      "ClientId": "clientId",
+      "ClientSecret": "",
+      "RedirectUrl": ""
     }
   },
   "OAuth2Settings": {
