refactor(api): update oauth2 google uri

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
@@ -37,7 +37,7 @@
   "OAuth2Settings": {
     "Google": {
       "TokenEndpoint": "https://oauth2.googleapis.com/token",
-      "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/auth",
+      "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/v2/auth/oauthchooseaccount",
       "ApiEndpoint": "https://www.googleapis.com",
       "ClientId": "clientId",
       "ClientSecret": "",
