--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -27,7 +27,7 @@
       ]
     },
     "Notion": {
-      "ApiEndpoint": "https://api.notion.com/v1",
+      "ApiEndpoint": "https://api.notion.com/v1/",
       "OAuth2Endpoint": "https://api.notion.com/v1/oauth/authorize",
       "ClientId": "clientId",
       "ClientSecret": "",
