--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
@@ -11,7 +11,7 @@
   },
   "IntegrationsSettings": {
     "Discord": {
-      "ApiEndpoint": "https://discord.com/api/v10",
+      "ApiEndpoint": "https://discord.com/api/v10/",
       "OAuth2Endpoint": "https://discord.com/oauth2/authorize",
       "ClientId": "clientId",
       "ClientSecret": "",
@@ -27,7 +27,7 @@
       ]
     },
     "Notion": {
-      "ApiEndpoint": "https://api.notion.com/v1",
+      "ApiEndpoint": "https://api.notion.com/v1/",
       "OAuth2Endpoint": "https://api.notion.com/v1/oauth/authorize",
       "ClientId": "clientId",
       "ClientSecret": "",
