--- a/backend/Zeus.Daemon.Runner/appsettings.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.json
@@ -16,7 +16,7 @@
       "BotToken": ""
     },
     "Notion": {
-      "ApiEndpoint": "https://api.notion.com/v1"
+      "ApiEndpoint": "https://api.notion.com/v1/"
     }
   },
   "GRpcApiSettings": {
