refactor(api): add multiple client id for google oauth2

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -38,9 +38,23 @@
     "Google": {
       "TokenEndpoint": "https://oauth2.googleapis.com/token",
       "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/v2/auth/oauthchooseaccount",
-      "ClientId": "clientId",
-      "ClientSecret": "",
-      "RedirectUrl": "",
+      "Clients": {
+        "Web": {
+          "ClientId": "clientId",
+          "ClientSecret": "",
+          "RedirectUrl": ""
+        },
+        "Android": {
+          "ClientId": "clientId",
+          "ClientSecret": "",
+          "RedirectUrl": ""
+        },
+        "iOS": {
+          "ClientId": "clientId",
+          "ClientSecret": "",
+          "RedirectUrl": ""
+        }
+      },
       "Scopes": [
         "https://www.googleapis.com/auth/userinfo.email",
         "https://www.googleapis.com/auth/userinfo.profile",
