--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
@@ -39,9 +39,19 @@
       "TokenEndpoint": "https://oauth2.googleapis.com/token",
       "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/v2/auth/oauthchooseaccount",
       "ApiEndpoint": "https://www.googleapis.com",
-      "ClientId": "clientId",
-      "ClientSecret": "",
-      "RedirectUrl": "",
+      "Clients": {
+        "Web": {
+          "ClientId": "clientId",
+          "ClientSecret": "",
+          "RedirectUrl": ""
+        },
+        "Android": {
+          "ClientId": "clientId"
+        },
+        "iOS": {
+          "ClientId": "clientId"
+        }
+      },
       "Scopes": [
         "https://www.googleapis.com/auth/userinfo.email",
         "https://www.googleapis.com/auth/userinfo.profile",
